# boat4090

./: .gitignore  CMakeLists.txt  README.md  environment.yml  environment_jetson.yml  package.xml  requirements.txt  requirements_training.txt  setup.py
config/: settings.yaml
dataset_final/splits/: test.txt  train.txt  val.txt
debug/: yaw_run_01.csv  yaw_run_02.csv  yaw_run_03.csv
deployment/: benchmark_tensorrt.py  convert_tensorrt.py  export_onnx.py
docs/: boat_prompt.md  projector使用教程.md  下一步工作计划.md  代码精简v1.md  标注指南.md  模型训练v1.md  河道宽度法不适用的情况.md  训练指南.md  评估指南.md  路径规划重制河道宽度法.md  路径规划重制逆透视映射.md  轨迹规划v1.md  轨迹规划v2.md  轨迹规划v3.md  轨迹规划v4.md
docs/chat/: chat1.md
river_lane_pilot/: __init__.py
river_lane_pilot/control/: __init__.py  pid_controller.py
river_lane_pilot/perception/: __init__.py  camera_interface.py  lane_detector.py  segformer_model.py
river_lane_pilot/planning/: __init__.py  path_processor.py  pure_pursuit.py  trajectory_planner.py
river_lane_pilot/utils/: __init__.py  config_loader.py  logger.py  visualization.py
scripts/: Boundary_identification copy.py  benchmark_fps.py  check_annotations.py  labelme_to_mask.py  plan_path.py  realtime_pilot.py  realtime_pilot_jsh.py  realtime_pilot_v2 copy.py  realtime_pilot_v2.py  realtime_pilot_v3.py  realtime_pilot_v4.py  realtime_pilot_v4_vis.py  split_dataset.py  tensorrt_runtime.py  visualize_centerline.py  相机测试.txt
src/: odom_control.cpp  vel_control.cpp
training/: augmentation.py  evaluate.py  train_segformer.py
vis_boundary/16/: yaw_angle.csv
vis_boundary/22.17/: yaw_angle.csv
(+4 files in other folders)
